add compiler plugin exports